update to stop loop

--- a/404.html
+++ b/404.html
@@ -1,8 +1,7 @@
 <head>
   <script>
     var url = "https://openconcept.ca/"
-    var path = window.location.pathname
-    window.location.href = url+path;
+    window.location.href = url;
   </script>
 </head>
 <body>
